--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.datasource.password=
 spring.h2.console.enable=true
 spring.h2.console.path=/h2-console
 
+# start sql scripts
 spring.sql.init.mode=always
